# eliott-tmx-parser

./: .gitignore  CMakeLists.txt  EngineMaster.md
include/tmx/: TmxLayer.hpp  TmxMap.hpp  TmxObject.hpp  TmxParser.hpp  TmxTileset.hpp
src/: TmxParser.cpp
tests/: test_parser.cpp
tests/data/: test.tmx
